hphp/test/slow/dom_document/DOMDocument_saveHTML_error2.php.expectf

Catchable fatal error: Argument 1 to DOMDocument::saveHTML() must be of type ?DOMNode, bool given in %s on line 10
